# universal_web_scraper

./: .gitignore  DEPLOYMENT_STRATEGY.md  Gusto Italiano.json  README.md  RENDER_DEPLOYMENT_TROUBLESHOOTING.md  agentql_example.py  agentql_playground.py  china_auto_sales_scraper.py  china_monthly_auto_sales.csv  china_monthly_auto_sales_data.json  china_monthly_auto_sales_data_scraped_links.json  china_monthly_auto_sales_data_v2.csv  china_monthly_auto_sales_data_v2.json  china_monthly_auto_sales_v2.csv  compare_price.py  month_code.csv  prompts.py  pyproject.toml  requirements-prod.txt  requirements.txt  sample.json  scraper.py  scraping_report_20250217_130549.json  scraping_report_20250217_132141.json  scraping_report_20250217_134619.json  scraping_report_20250217_143258.json  scraping_report_20250217_153623.json  setup.py  tesla_nov_2024_sales_data.json  validation_report.json
.github/workflows/: deploy.yml
code_samples/: agentql_example.py  hertz_reservation.py
data-chat-ui/: .vercelignore  README.md  VERCEL_DEPLOYMENT.md  next.config.ts  package-lock.json  package.json  prebuild.js  setup.sh  vercel-build.js
data-chat-ui/src/: utils.ts
data/input/: manufacturer_code.csv  month_code.csv
requirements/: fastapi_prd.md  web_scraper_requirements.md
scripts/: call_rpc_functions.py  check_data_completeness.py  clean_auto_sales_data.py  compare_source_vs_db.py  create_exec_sql.py  create_model_truth.py  create_rpc_functions.py  export_data.py  generate_specific_mapping.py  import_auto_sales.py  run_api.py  run_sql_api.py  setup_project.py  submit_manufacturer_job.py  test_sql_client.py  validate_auto_sales_data.py  validate_auto_sales_db.py
src/: __init__.py  main.py
src/api/: jobs.py  main.py  models.py
src/config/: __init__.py  constants.py  langsmith.py  logging_config.py  settings.py
src/db/: direct_pg_client.py  sql_client.py  (+2 more)
(+28 files in other folders)
