[tool.poetry]
name = "china-auto-sales-scraper"
version = "0.1.0"
description = "A scraper for Chinese automotive sales data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
termcolor = "^2.4.0"
tiktoken = "^0.5.2"
langsmith = "^0.0.77"
instructor = "^0.4.5"
pydantic = "^2.5.3"
aiohttp = "^3.8.0"
firecrawl = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100 