[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china_auto_sales_scraper"
version = "0.1"
description = "A scraper for Chinese auto sales data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "langsmith>=0.0.77",
    "instructor>=0.4.5",
    "pydantic>=2.5.3",
    "firecrawl>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false 